K8s/Lab1/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressservice
spec:
  # you tell K8s which Ingress-Controller Use
  ingressClassName: nginx
  rules:
  - host: sub-domain.ahmed.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # to connect with Service
            name: myservice
            port:
              number: 80
